opam-version: "2.0"
name: "map-gen"
version: "0.1"
synopsis: "One-line description"
description: """
Longer description
"""
maintainer: "Benjamin Tucker <benjamin.tucker@hey.com>"
authors: "Benjamin Tucker <benjamin.tucker@hey.com>"
depends: [
    "ocaml" {>= "4.9.0"}
    "reason"
    "dune" {>= "2.6.0"}
    "ANSITerminal"
    "bitstring"
    "camlimages"
    "core_kernel"
    "core"
    "parmap"
    "ppx_sexp_conv"
    "ppx_deriving"
    "ppx_hash"
    "ppx_bin_prot"
    "ppx_expect"
    "ppx_inline_test"
    "ppx_let"
    "decompress" {>= "1.2.0"}
    "tsdl"
    "memtrace"
    "merlin" {dev}
    "odoc" {dev}
    "utop" {dev}
]
build: ["dune" "build" "-p" name "-j" jobs]