(library
 (name Base_overlay)
 (inline_tests)
 (libraries
  bin_prot
  core_kernel
  Mg_util
  Tale
  Grid
  Config
  Progress_view
  Minecraft
  Minecraft_template
  Overlay
  Point_cloud)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
