(library
 (name Building)
 (inline_tests)
 (libraries
  core
  Mg_util
  Tale
  Grid
  Config
  Minecraft
  Minecraft_template
  Overlay
  bin_prot)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
