(library
 (name Building_old)
 (inline_tests)
 (libraries
  bin_prot
  core
  Mg_util
  Tale
  Grid
  Config
  Minecraft
  Minecraft_template
  Overlay)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
