(library
 (name Roads)
 (inline_tests)
 (libraries
  core
  Mg_util
  Tale
  Grid
  Config
  Progress_view
  Minecraft
  Minecraft_template
  Overlay
  Priority_queue
  Sparse_grid
  Meta_overlay
  bin_prot)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
