(library
 (name Torching)
 (inline_tests)
 (libraries
  bin_prot
  core_kernel
  Config
  Grid
  Grid_flood
  Mg_util
  Minecraft
  Minecraft_template
  Tale
  Overlay)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
