(library
 (name Town_overlay)
 (inline_tests)
 (libraries
  core_kernel
  Mg_util
  Tale
  Grid
  Config
  Progress_view
  Minecraft
  Minecraft_template
  Overlay
  Roads
  Sparse_grid
  Building
  Meta_overlay
  bin_prot)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
