(library
 (name Town_overlay)
 (inline_tests)
 (libraries
  core
  Base_overlay
  Building_old
  Mg_util
  Tale
  Torching
  Grid
  Config
  Progress_view
  Minecraft
  Minecraft_postprocessing
  Minecraft_template
  Overlay
  Point_cloud
  Roads
  Sparse_grid
  Test_helpers
  Building
  Meta_overlay
  bin_prot)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
