(library
    (name Worldgen)
    (inline_tests)
    (libraries
        core_kernel
        Mg_util
        Tale
        Grid
        Progress_view
        ANSITerminal
        Minecraft
        Minecraft_template
        camlimages.core
        camlimages.png
        bin_prot
    )
    (preprocess (pps
        ppx_inline_test
        ppx_expect
        ppx_sexp_conv
        ppx_deriving.eq
        ppx_deriving.ord
        ppx_hash
        ppx_bin_prot
    ))
)