(library
 (name Worldgen)
 (inline_tests)
 (libraries
  bin_prot
  camlimages.core
  camlimages.png
  core_kernel
  parmap
  Base_overlay
  Building
  Building_old
  Config
  Mg_util
  Tale
  Torching
  Grid
  Grid_flood
  Progress_view
  ANSITerminal
  Minecraft
  Minecraft_postprocessing
  Minecraft_template
  Overlay
  Point_cloud
  Priority_queue
  Roads
  Sparse_grid
  Town_overlay
  Meta_overlay)
 (preprocess
  (pps
   ppx_inline_test
   ppx_expect
   ppx_sexp_conv
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_hash
   ppx_let
   ppx_bin_prot)))
